--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="myStyle.css">
   </head>
   <body>
-    Hello World!
+    <div id="topBar">
+      Hello World!
+    </div>
+    
   </body>
 </html>
