basic structure added
i have added basic structure by using divs, 
i choose structure of two main bars, top, in which is logo
and navigation menu, and below this top bar is content bar,
which will hold content of pages

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
     <link rel="stylesheet" type="text/css" href="myStyle.css">
   </head>
   <body>
-    <div id="topBar">
-      Hello World!
+    <div id="centeringDiv">
+      <div id="topBar">
+        <div id="logo">
+          Dreaming Glory
+        </div>
+        <div id="navigationMenu">
+        </div>
+      </div>
+      <div id="contentBar">
+      </div>
     </div>
     
   </body>
