--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
           Dreaming Glory
         </div>
         <div id="navigationMenu">
+        	<a href="index.html" class="navigationLink" >
+        	<p>Home</p>
+        	</a>
+        	<a href="index.html" class="navigationLink">
+        	<p>Knowledge</p>
+        	</a>
+        	<a href="index.html" class="navigationLink">
+        	<p>My Dreams</p>
+        	</a>
+        	<a href="index.html" class="navigationLink">
+        	<p>About</p>
+        	</a>
         </div>
       </div>
       <div id="contentBar">
