--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="myStyle.css">
   </head>
   <body>
     <div id="centeringDiv">
-      <div id="topBar">
-        <div id="logo">
-          <img src="DreaminGlory.png">
-        </div>
-        <div id="navigationMenu">
-        	<a href="index.html" class="navigationLink" >
-        	<p>Home</p>
-        	</a>
-        	<a href="index.html" class="navigationLink">
-        	<p>Knowledge</p>
-        	</a>
-        	<a href="index.html" class="navigationLink">
-        	<p>My Dreams</p>
-        	</a>
-        	<a href="index.html" class="navigationLink">
-        	<p>About</p>
-        	</a>
-        </div>
+      <div id="logo">
+        <img src="DreaminGlory.png">
+      </div>
+      <div id="navigationMenu">
+        <ul>
+          <li>
+            <a href="index.html" class="active" >
+              <p>Home</p>
+            </a>
+          </li>
+          <li>
+            <a href="index.html">
+              <p>Knowledge</p>
+            </a>
+          </li>
+          <li>
+            <a href="index.html">
+              <p>My Dreams</p>
+            </a>
+          </li>
+          <li>
+            <a href="index.html">
+              <p>About</p>
+            </a>
+            </li>
+          </ul>          
       </div>
       <div id="contentBar">
         <p class="content">
