--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
         <ul>
           <li>
             <a href="index.html" class="active" >
-              <p>Home</p>
+              Home
             </a>
           </li>
           <li>
             <a href="index.html">
-              <p>Knowledge</p>
+              Knowledge
             </a>
           </li>
           <li>
             <a href="index.html">
-              <p>My Dreams</p>
+              My Dreams
             </a>
           </li>
           <li>
             <a href="index.html">
-              <p>About</p>
+              About
             </a>
             </li>
           </ul>          
