Added new logo and choosed different colors

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <html lang="cs-cz">
     <head>
         <meta charset="utf-8" />
-        <meta name="description" content="Osobni portfolio phantom degustatora Remiho">
-        <meta name="keywords" content="portfolio, graffiti, virtual phantom, Remi">
-        <meta name="author" content="ReMi">
+        <meta name="description" content="Personal portfolio of Matej Grot">
+        <meta name="keywords" content="portfolio, web design, programming, front-end, back-end">
+        <meta name="author" content="Matej Grot">
         <link rel="stylesheet" href="styl.css" type="text/css" class="avatar">
         <link rel="shortcut icon" href="obrazky/10692893_spray_paint_graffiti_king_art_icon.ico">
-        <title>Muj prvni web</title>
+        <title>GeeWebDesign</title>
     </head>
     <body>
         <header>
             <div id="logo">
-                <h1>Remi <span>Phantom</span></h1>
-                <small>Virtual Vandall</small>
+                <h1>Matěj <span>Grot</span></h1>
+                <small>Developer</small>
             </div>
             <nav>
                 <ul>
