Big changes, added warrior

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="keywords" content="portfolio, web design, programming, front-end, back-end">
         <meta name="author" content="Matej Grot">
         <link rel="stylesheet" href="styl.css" type="text/css" class="avatar">
+        <link rel="stylesheet" href="css/lightbox.min.css" type="text/css">
+        <script src="js/lightbox-plus-jquery.min.js"></script>
         <link rel="shortcut icon" href="obrazky/10692893_spray_paint_graffiti_king_art_icon.ico">
         <title>GeeWebDesign</title>
     </head>
@@ -32,10 +34,25 @@
             </header>
             <section>
                 
-                <p class="centrovany"><img src="obrazky/avatar.png" class="avatar"></p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris malesuada aliquet cursus. Pellentesque maximus massa id iaculis ornare. Ut dui dolor, aliquet eget auctor nec, elementum eget lectus. Vivamus consequat dui eu purus egestas, vitae molestie nisl convallis. Fusce egestas turpis quis ullamcorper hendrerit. Sed ut erat eu arcu consequat porttitor et at magna. Morbi auctor sollicitudin bibendum. Nam at maximus diam, nec pretium tortor. </p>
-                <h2>Dovednosti</h2>
-                <p> Aliquam id metus in lacus tincidunt vulputate sit amet non felis. Mauris eu aliquet nisi. Fusce efficitur sit amet mi a euismod. Sed molestie est dignissim, tempus eros ac, egestas dui. In hac habitasse platea dictumst. Ut orci magna, aliquet id tellus vel, convallis porta sem. Mauris elit dui, pellentesque tristique hendrerit vel, commodo bibendum magna. </p>
+                <p class="centrovany"><img src="obrazky/MG_Real_Portrait.jpg" class="avatar"></p>
+                <p> Jsem Matěj Grot a pocházím z Jižní Moravy, z obce Hrušky. Informatika mě přitahovala již od základní školy. Proto jsem po dokončení gymnázia zahájil studium na Masarykově 
+                    Univerzitě, Fakulta Informatiky. Bohužel tou dobou jsem nebyl dostatečně disciplinovaný a zorganizovaný a studium jsem nedokončil. 
+                    I tak jsem se ale informatiky držel a začal jsem pracovat jako manuální tester ve firmě Worklio, kde jsem se postupně vypracoval až na Produktového manažera. Na této pozici
+                    jsem se však necítil ve své kůži a rozhodl jsem se, že to s programováním zkusím ještě jednou. Rozhodl jsem se pro rekvalifikační kurz. To mi dalo nové nadšení a 
+                    otevřelo mnohé obzory. Již od začátku mě velice lákal web development a k tomu jsem se také dostal, skrze frameworky Spring Boot a React. 
+                    Nyní hledám práci na pozici webového vývojáře, ať už je to back-end či front-end. Myslím že vyvíjet webové aplikace je pro mě to nejzajímavější.
+                </p>
+                <h2>Rozvržení Webu</h2>
+                <p> Co můžete najít na tomto webu:</p>
+                <ul class="list">
+                    <li class="list-item">
+                        <a href="dovednosti.html">Dovednosti</a>
+                    </li>
+                    <li class="list-item">
+                        Zivotopis
+                    </li>
+                </ul>
+
                 <div class="cistic"></div>
 
                 <p class="tlacitko-odstavec">
