--- a/kontakt.html
+++ b/kontakt.html
@@ -1,50 +1,134 @@
 <!DOCTYPE html>
 
 <html lang="cs-cz">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="contact" content="Kontakt na Remiho">
-        <meta name="keywords" content="portfolio, graffiti, virtual phantom, Remi, contact">
-        <meta name="author" content="ReMi">
-        <link rel="stylesheet" href="styl.css" type="text/css" class="avatar">
-        <link rel="shortcut icon" href="obrazky/10692893_spray_paint_graffiti_king_art_icon.ico">
-        <title>Kontakt</title>
-    </head>
-    <body>
-        <header>
-            <div id="logo">
-                <h1>Remi <span>Phantom</span></h1>
-                <small>Virtual Vandall</small>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Domů</a></li>
-                    <li><a href="oMne.html">O mně</a></li>
-                    <li><a href="dovednosti.html">Dovednosti</a></li>
-                    <li><a href="reference.html">Reference</a></li>
-                    <li><a class="kontakt-tlacitko" class="aktivni" href="kontakt.html">Kontakt</a></li>
-                </ul>
-            </nav>
-        </header>
-        <article>
-            <header>
-                <h1>Kontakt</h1>
-            </header>
-            <section>
-                
-                <p class="centrovany"> 
-                    Pokud mi chcete neco sdelit, kontaktujte me na email reMi@meridian.org.
-                </p>
-                <p class="centrovany">
-                    <iframe frameborder="0" scrolling="no" width="500px" height="220px"
-                        src="http://www.itnetwork.cz/service/mail_form.php?hash=kod-vaseho-mailformu">
-                    </iframe>
-                </p>
-            </section>
-        </article>
 
-        <footer>
-            Vytvořil &copy;HoBi 2021 pro <a href="https://itnetwork.cz">itnetwork.cz</a>
-        </footer>
-    </body>
+<head>
+    <meta charset="utf-8" />
+    <meta name="description" content="Personal portfolio of Matej Grot">
+    <meta name="keywords"
+        content="portfolio, web-design, programming, front-end, back-end, developer, junior, Java, React, JavaScript">
+    <meta name="author" content="Matej Grot">
+
+    <link rel="stylesheet" href="styl_about.css" type="text/css" class="avatar">
+    <link rel="stylesheet" href="css/lightbox.min.css" type="text/css">
+    <link rel="shortcut icon" href="obrazky/10692893_spray_paint_graffiti_king_art_icon.ico">
+    <script src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="./js/translate.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/6.0.3/tinymce.min.js"></script>
+    <script>
+        tinymce.init({
+            selector: "textarea[id*=content]",
+            entities: "160,nbsp",
+            entity_encoding: "named",
+            entity_encoding: "raw"
+        });
+    </script>
+
+    <title>GeeWebDesign</title>
+</head>
+
+<body id="contact">
+    <header>
+        <nav class="navbar navbar-expand-md">
+            <a class="navbar-brand d-flex" href="#">
+                <img src="./images/logo.png" class="d-inline-block align-top" width="32" height="32" alt="Twitter" />
+                <div class="d-flex flex-column align-items-start">
+                    <div>
+                        Matěj <span>Grot</span>
+                    </div>
+                    <small>Developer</small>
+                </div>
+            </a>
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#obsah-navigacni-listy" aria-controls="obsah-navigacni-listy" aria-expanded="false"
+                aria-label="Rozbalit navigaci">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="obsah-navigacni-listy">
+                <ul class="navbar-nav ms-auto" style="margin-right: 100px;">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" data-i18n="link-home" href="index.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-i18n="link-about" href="about.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-i18n="link-cv" href="skill.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link aktivni" data-i18n="link-portfolio" href="portfolio.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link kontakt" href="kontakt.html">Contact</a>
+                    </li>
+                </ul>
+
+            </div>
+            <select class="position-absolute top-0 end-0 mt-2 me-2 form-select w-auto" id="languageSwitcher">
+                <option value="en">EN</option>
+                <option value="cz">CZ</option>
+            </select>
+
+        </nav>
+    </header>
+
+    <article id="contact-article" class="d-flex justify-content-center" style="background-color: aqua;">
+        <div class="d-flex flex-column align-items-center justify-content-center natkaBlog-container"
+            style="background-color: white;">
+            <h1 class="skills-h1" data-i18n="contact-h1"></h1>
+            <p data-i18n="contact-notice" class="contact-notice"></p>
+            <div class="my-2 d-flex justify-content-start align-items-center row" style="width: 100%;">
+                <span class="natkaBlog-label col-12 col-md-4">Email</span>
+                <div class="natkaBlog-par col-12 col-md-4">
+                    <p>grot.matej@gmail.com</p>
+                </div>
+            </div>
+            <div class="my-2 d-flex justify-content-start align-items-center row" style="width: 100%;">
+                <span class="natkaBlog-label col-12 col-md-4">Tel.</span>
+                <div class="natkaBlog-par col-12 col-md-4">
+                    <p>+420 604467627</p>
+                </div>
+            </div>
+            <div class="my-2 d-flex justify-content-start align-items-center row" style="width: 100%;">
+                <span class="natkaBlog-label col-12 col-md-4">LinkedIn</span>
+                <div class="natkaBlog-par col-12 col-md-4">
+                    <p><a href="https://www.linkedin.com/in/matej-grot" target="_blank">Matej Grot</a></p>
+                </div>
+            </div>
+            <img src="./images/houbicky.JPG" class="contact-img"/>
+        </div>
+        
+    </article>
+
+
+    <footer class="d-flex justify-content-evenly align-items-center row">
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            Tel: +420 604467627
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            Email: grot.matej@gmail.com
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            <a href="https://www.flickr.com/photos/59723420@N03/" target="_blank">
+                Flickr photography <img src="./images/flickr.png" class="footer-img">
+            </a>
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            <a href="https://www.codingame.com/profile/6975e0707369af35c49b031fdbd8b2854184741" target="_blank">
+                Codin Game <img src="./images/codinGame2.png" class="footer-img codinGame">
+            </a>
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            <a href="https://www.linkedin.com/in/matej-grot" target="_blank">
+                LinkedIn <img src="./images/linkedin_white.svg" class="footer-img">
+            </a>
+        </div>
+    </footer>
+</body>
+
 </html>
