--- a/skill.html
+++ b/skill.html
@@ -5,95 +5,285 @@
 <head>
     <meta charset="utf-8" />
     <meta name="description" content="Personal portfolio of Matej Grot">
-    <meta name="keywords" content="portfolio, web design, programming, front-end, back-end">
+    <meta name="keywords"
+        content="portfolio, web-design, programming, front-end, back-end, developer, junior, Java, React, JavaScript">
     <meta name="author" content="Matej Grot">
-    <link rel="stylesheet" href="styl.css" type="text/css" class="avatar">
+
+    <link rel="stylesheet" href="styl_about.css" type="text/css" class="avatar">
     <link rel="stylesheet" href="css/lightbox.min.css" type="text/css">
     <link rel="shortcut icon" href="obrazky/10692893_spray_paint_graffiti_king_art_icon.ico">
     <script src="js/lightbox-plus-jquery.min.js"></script>
+    <script src="./js/translate.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tinymce/6.0.3/tinymce.min.js"></script>
+    <script>
+        tinymce.init({
+            selector: "textarea[id*=content]",
+            entities: "160,nbsp",
+            entity_encoding: "named",
+            entity_encoding: "raw"
+        });
+    </script>
+
     <title>GeeWebDesign</title>
 </head>
 
-<body>
+<body id="home-body">
     <header>
-        <div id="logo">
-            <h1>Matěj <span>Grot</span></h1>
-            <small>Developer</small>
-        </div>
-        <nav>
-            <ul>
-                <li class="aktivni"><a href="index.html">Domů</a></li>
-                <li><a href="oMne.html">O mně</a></li>
-                <li><a href="dovednosti.html">Dovednosti</a></li>
-                <li><a href="reference.html">Reference</a></li>
-                <li><a class="kontakt-tlacitko" href="kontakt.html">Kontakt</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-md">
+            <a class="navbar-brand d-flex" href="#">
+                <img src="./images/logo.png" class="d-inline-block align-top" width="32" height="32" alt="Twitter" />
+                <div class="d-flex flex-column align-items-start">
+                    <div>
+                        Matěj <span>Grot</span>
+                    </div>
+                    <small>Developer</small>
+                </div>
+            </a>
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#obsah-navigacni-listy" aria-controls="obsah-navigacni-listy" aria-expanded="false"
+                aria-label="Rozbalit navigaci">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="obsah-navigacni-listy">
+                <ul class="navbar-nav ms-auto" style="margin-right: 100px;">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" data-i18n="link-home" href="index.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-i18n="link-about" href="about.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link aktivni" data-i18n="link-cv" href="skill.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" data-i18n="link-portfolio" href="portfolio.html"></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link kontakt" href="kontakt.html">Contact</a>
+                    </li>
+                </ul>
+
+            </div>
+            <select class="position-absolute top-0 end-0 mt-2 me-2 form-select w-auto" id="languageSwitcher">
+                <option value="en">EN</option>
+                <option value="cz">CZ</option>
+            </select>
+
         </nav>
     </header>
-    <article>
-        <header>
-            <h1>O mě</h1>
-        </header>
-        <section id="warrior-section" style="width: 600px; height: 400px; border: 1px solid #333;">
-        </section>
+
+
+    <article id="skills-page" class="d-flex flex-column align-items-center">
+        <div class="d-flex flex-column align-items-start skill-section-container">
+            <h1 class="skills-h1" data-i18n="skills-proglang"></h1>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">HTML/CSS</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">Bootstrap</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">Java</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">Spring Boot</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">JavaScript</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">React</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">MySQL</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label">UNIX/Linux</span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex flex-column align-items-start skill-section-container">
+            <h1 class="skills-h1" data-i18n="skills-languages"></h1>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="czech"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="english"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="polish"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="russian"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+        </div>
+        <div class="d-flex flex-column align-items-start skill-section-container">
+            <h1 class="skills-h1" style="font-style: italic;" data-i18n="legend"></h1>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="beginner"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="lower-intermediate"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="intermediate"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="experienced"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect"></div>
+                </div>
+            </div>
+            <div class="my-2 skill d-flex justify-content-between" style="width: 100%;">
+                <span class="skill-label" data-i18n="expert"></span>
+                <div class="rating">
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                    <div class="rect filled"></div>
+                </div>
+            </div>
+        </div>
+
     </article>
 
-    <footer>
-        Vytvořil &copy;HoBi 2021 pro <a href="https://itnetwork.cz">itnetwork.cz</a>
+    <footer class="d-flex justify-content-evenly align-items-center row">
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            Tel: +420 604467627
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            Email: grot.matej@gmail.com
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            <a href="https://www.flickr.com/photos/59723420@N03/" target="_blank">
+                Flickr photography <img src="./images/flickr.png" class="footer-img">
+            </a>
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            <a href="https://www.codingame.com/profile/6975e0707369af35c49b031fdbd8b2854184741" target="_blank">
+                Codin Game <img src="./images/codinGame2.png" class="footer-img codinGame">
+            </a>
+        </div>
+        <div class="footer-link col-6 col-md-4 col-lg-2">
+            <a href="https://www.linkedin.com/in/matej-grot" target="_blank">
+                LinkedIn <img src="./images/linkedin_white.svg" class="footer-img">
+            </a>
+        </div>
     </footer>
-
-    <script type="module">
-        import * as THREE from './three/three.module.js';
-        import { GLTFLoader } from './three/GLTFLoader.js';
-
-        const section = document.getElementById("warrior-section");
-        const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
-        renderer.setSize(section.clientWidth, section.clientHeight);
-        section.appendChild(renderer.domElement);
-
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(
-            45,
-            section.clientWidth / section.clientHeight,
-            0.1,
-            1000
-        );
-        camera.position.set(0, 1.5, 3);
-        camera.lookAt(0, 0, 0);
-
-        const light = new THREE.DirectionalLight(0xffffff, 1);
-        light.position.set(5, 10, 7.5);
-
-        const loader = new GLTFLoader();
-        loader.load('/warrior_toy/scene.gltf', (gltf) => {
-            const warrior = gltf.scene;
-            warrior.scale.set(5, 5, 5);
-
-            const box = new THREE.Box3().setFromObject(warrior);
-            const center = new THREE.Vector3();
-            box.getCenter(center);
-            warrior.position.sub(center);
-
-            const size = new THREE.Vector3();
-            box.getSize(size);
-            warrior.position.y += size.y / 2;
-
-            const pivot = new THREE.Group();
-            pivot.add(warrior);
-            scene.add(pivot);
-            scene.add(light);
-
-            warrior.position.y = 0;
-
-            function animate() {
-                requestAnimationFrame(animate);
-                pivot.rotation.y += 0.01;
-                renderer.render(scene, camera);
-            }
-
-            animate();
-        });
-    </script>
 </body>
 
 </html>
