creating smaller images

--- a/kontakt.html
+++ b/kontakt.html
@@ -100,7 +100,7 @@
                     <p><a href="https://www.linkedin.com/in/matej-grot" target="_blank">Matej Grot</a></p>
                 </div>
             </div>
-            <img src="./images/houbicky.JPG" class="contact-img"/>
+            <img src="./images/houbicky_50DPI.jpg" class="contact-img"/>
         </div>
         
     </article>
