Addes some text for sachovnice portfolio, added support for storing language selection into local storage

--- a/portfolio.html
+++ b/portfolio.html
@@ -95,8 +95,8 @@
                 <a href="portfolio_sachovnice.html">
                     <img class="card-img-top" id="sachovnice-card-img" src="./images/sachovnice_portfolio.png" alt="Sachovnice">
                     <div class="card-body">
-                        <h4 class="card-title" data-i18n="portfolio-card-title"></h4>
-                        <p class="card-text" data-i18n="portfolio-card-text"></p>
+                        <h4 class="card-title" data-i18n="portfolioSachy-card-title"></h4>
+                        <p class="card-text" data-i18n="portfolioSachy-card-text"></p>
                     </div>
                 </a>
                 <div class="card-footer">
