--- a/portfolio_sachovnice.html
+++ b/portfolio_sachovnice.html
@@ -90,7 +90,7 @@
             <div class="my-2 d-flex justify-content-start align-items-center row" style="width: 100%;">
                 <span class="natkaBlog-label col-12 col-md-4">GitHub</span>
                 <div class="natkaBlog-par col-12 col-md-4">
-                    <p><a href="https://github.com/kaczeldo/sachovnice.git" target="_blank">GitHub</a></p>
+                    <p><a href="https://github.com/kaczeldo/sachovnice2" target="_blank">GitHub</a></p>
                 </div>
             </div>
             <div class="my-2 d-flex justify-content-start align-items-center row" style="width: 100%;">
