changed the ling to sachy2

--- a/portfolio_sachovnice.html
+++ b/portfolio_sachovnice.html
@@ -84,7 +84,7 @@
             <div class="my-2 d-flex justify-content-start align-items-center row" style="width: 100%;">
                 <span class="natkaBlog-label col-12 col-md-4">URL</span>
                 <div class="natkaBlog-par col-12 col-md-4">
-                    <p><a href="./sachovnice/sachovnice.html" target="_blank" data-i18n="the-game-chess"></a></p>
+                    <p><a href="./sachovnice/sachovnice2.html" target="_blank" data-i18n="the-game-chess"></a></p>
                 </div>
             </div>
             <div class="my-2 d-flex justify-content-start align-items-center row" style="width: 100%;">
